docs, examples: Update 'output' key to 'stdout' key

--- a/examples/sorting_cpp/experiments.yml
+++ b/examples/sorting_cpp/experiments.yml
@@ -30,7 +30,7 @@ experiments:
   - name: quick-sort
     use_builds: [simexpal]
     args: ['quicksort', '@INSTANCE@', '@EXTRA_ARGS@']
-    output: stdout
+    stdout: out
 
 variants:
   - axis: 'block-algo'
