--- a/docs/experiments.yml.example
+++ b/docs/experiments.yml.example
@@ -9,7 +9,7 @@ instdir: "<path_to_instances_directory>"
 experiments:
   - name: insertion-sort
     args: ['./sort.py', '--algo=insertion_sort', '@INSTANCE@']
-    output: stdout
+    stdout: out
   - name: bubble-sort
     args: ['./sort.py', '--algo=bubble_sort', '@INSTANCE@']
-    output: stdout
+    stdout: out
