--- a/examples/sorting/experiments.yml
+++ b/examples/sorting/experiments.yml
@@ -15,7 +15,7 @@ instances:
 experiments:
   - name: insertion-sort
     args: ['./sort.py', '--algo=insertion-sort', '@INSTANCE@']
-    output: stdout
+    stdout: out
   - name: bubble-sort
     args: ['./sort.py', '--algo=bubble-sort', '@INSTANCE@']
-    output: stdout
+    stdout: out
