tests/instances: Add tests for automatic unpacking of URL instances

--- a/tests/instances/experiments_ymls/url/experiments.yml
+++ b/tests/instances/experiments_ymls/url/experiments.yml
@@ -5,3 +5,13 @@ instances:
     items:
       - 'experiments.json'
       - 'launchers.json'
+  - method: url
+    url: 'https://snap.stanford.edu/data/@INSTANCE_FILENAME@.txt.gz'
+    format: 'gz'
+    items:
+      - 'facebook_combined'
+  - method: url
+    url: 'http://nrvis.com/download/data/dynamic/soc-epinions-trust-dir.zip'
+    format: zip
+    items:
+      - 'soc-epinions-trust-dir.edges'
