--- a/tests/experiments/experiments_ymls/undefined_variant/experiments.yml
+++ b/tests/experiments/experiments_ymls/undefined_variant/experiments.yml
@@ -1,5 +1,5 @@
 # This file is identical to examples/sorting/sorting_cpp
-# except for a minor typo
+# except for an undefined variant
 builds:
   - name: simexpal
     git: 'https://github.com/hu-macsy/simexpal'
@@ -54,6 +54,6 @@ matrix:
       variants: [ba-insert, bs32]
       revisions: [main]
     - experiments: [quick-sort]
-      # The following variant contains a typo
-      variants: [ba-buble]
+      # The following variant does not exist
+      variants: [undefined-variant]
       revisions: [main]
