--- a/docs/experiments.yml.example
+++ b/docs/experiments.yml.example
@@ -13,8 +13,8 @@ instdir: "./instances"
 
 experiments:
   - name: insertion-sort
-    args: ['./sort.py', '--algo=insertion_sort', '@INSTANCE@']
+    args: ['./my_sort.py', '--algo=insertion_sort', '@INSTANCE@']
     stdout: out
   - name: bubble-sort
-    args: ['./sort.py', '--algo=bubble_sort', '@INSTANCE@']
+    args: ['./my_sort.py', '--algo=bubble_sort', '@INSTANCE@']
     stdout: out
