--- a/examples/sorting/experiments.yml
+++ b/examples/sorting/experiments.yml
@@ -14,8 +14,8 @@ instances:
 
 experiments:
   - name: insertion-sort
-    args: ['./sort.py', '--algo=insertion-sort', '@INSTANCE@']
+    args: ['./my_sort.py', '--algo=insertion-sort', '@INSTANCE@']
     stdout: out
   - name: bubble-sort
-    args: ['./sort.py', '--algo=bubble-sort', '@INSTANCE@']
+    args: ['./my_sort.py', '--algo=bubble-sort', '@INSTANCE@']
     stdout: out
