--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install ninja
         run: |
-          python -m pip install ninja
+          pip install ninja
       - name: Install simexpal
         run: |
-          python -m pip install --upgrade pip
           pip install .
       - name: Run tests
         run: |
-          pip install pytest==6.2.5
+          pip install pytest
           pytest
 
   build-and-test-macos:
@@ -47,14 +46,13 @@ jobs:
           brew install libomp
       - name: Install ninja
         run: |
-          python -m pip install ninja
+          pip install ninja
       - name: Install simexpal
         run: |
-          python -m pip install --upgrade pip
           pip install .
       - name: Run tests
         run: |
-          pip install pytest==6.2.5
+          pip install pytest
           pytest -k "not slurm"
 
   # This job checks whether the current workflow is triggered by a new tag with the following form: INT.INT or INT.INT.INT (for example: 1.0, 1.0.1, ...)
@@ -87,7 +85,6 @@ jobs:
           python-version: 3.11
       - name: Create wheel
         run: |
-          python -m pip install --upgrade pip
           pip install wheel
           python3 -m pip wheel ./ --wheel-dir=./dist --no-deps
       - name: Create source package
