--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Python latest
         uses: actions/setup-python@v5
+        with:
+          python-version: 3.13
       - name: Install libomp (macOS)
         run: |
           brew install libomp
